--- a/.gitignore
+++ b/.gitignore
@@ -181,6 +181,7 @@ pyrightconfig.json
 !.vscode/extensions.json
 !.vscode/*.code-snippets
 
+
 # Local History for Visual Studio Code
 .history/
 
@@ -193,3 +194,4 @@ pyrightconfig.json
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
+/apply_bot/example/*
